@@ -7,8 +7,8 @@ DESKTOPS 6
 #    unfocused desktop in switcher
 #    unfocused desktop in switcher with opened windows
 #    the bars border
-# Font and bar backgrounds colours
 SWITCHERTHEME #443311;#002030;#004060;#001020;
+# Font and bar backgrounds colours
 # statustheme colours are :
 #    default bar background
 #    focused desktop font in switcher
@@ -30,7 +30,7 @@ MASTERSIZE 52
 DEFAULTMODE 3;4;0;1;2;3;
 # Set number of extra window/s in the master area(defaults to 0)
 # must end in semicolon
-NMASTER 0;0;1;o;2;0;
+NMASTER 0;0;1;0;2;0;
 # open new windows in the stack? 0=yes,1=no
 ATTACHASIDE 1
 # if new window is in the stack add it at the top
